--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <fieldset>
         <legend><span style="font-size: 50px; color:rgb(176, 255, 177);">UPCOMING</span></legend>
     <ul>
-        <p style="text-align: center;"> <a href="https://forms.gle/y84RMg7SoHqhwRjH8"><img src="update.jpeg" class="yatoimg" /></a><br></p>
+        <p style="text-align: center;"> <a href="https://forms.gle/y84RMg7SoHqhwRjH8"><img src="ladynoir.jpg" class="yatoimg2" /></a><br></p>
         <li>DATA SCIENCE</li><br>
         <li>PYTHON</li><br>
         <li>AMPTITUDE</li><br>
