--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <body>
         
         <div class="yato">
-        <a href="https://forms.gle/y84RMg7SoHqhwRjH8"><img src="yato-kamii.jpg" class="yatoimg" /></a> </div>
-        <div class="welcome" style="margin-left: 5%;margin-right: 5%;"><p ><b><a href="https://forms.gle/y84RMg7SoHqhwRjH8" style="color:black;background-color: rgb(142, 255, 255);padding:3%;font-size:45px;border-radius: 30%;" >|- Always at your services -|</a></b></p>
+        <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="yato-kamii.jpg" class="yatoimg" /></a> </div>
+        <div class="welcome" style="margin-left: 5%;margin-right: 5%;"><p ><b><a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank" style="color:black;background-color: rgb(142, 255, 255);padding:3%;font-size:45px;border-radius: 30%;" >|- Always at your services -|</a></b></p>
     </div>
-    <div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8" ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
-    <div class="mypap3"><a href="https://forms.gle/BYcWLsfzv9LyCBFRA" ><span   ><b>SENT A PICTURE click here</b> </span></a> </div>
+    <div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank" ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
+    <div class="mypap3"><a href="https://forms.gle/BYcWLsfzv9LyCBFRA" target="_blank"><span   ><b>SENT A PICTURE click here</b> </span></a> </div>
 
     <div class="syllabus", style="font-size: 50px;">
     <select id="topicSelect">
@@ -47,22 +47,22 @@
 <div class="nift">
     <fieldset>
         <legend><span style="font-size:50px;color:rgb(15, 42, 133);"><span style="color: rgb(255, 255, 255);"><b><i>NIFT RESOURCES</i></b></span></span></legend><br>
-    <div class="mypap"><a href="https://drive.google.com/drive/folders/1Nm-n_c1QW8iAHLj86KQLawbF9zt1mHhh?usp=sharing" ><span   >MOdel Related papers</span></a> </div>  
+    <div class="mypap"><a href="https://drive.google.com/drive/folders/1Nm-n_c1QW8iAHLj86KQLawbF9zt1mHhh?usp=sharing" target="_blank"><span   >MOdel Related papers</span></a> </div>  
 <br><br>
 </fieldset>
 <br>
     <fieldset>
         <hr><p style="text-align: center;">COMPLETE SYLLABUS</p><hr>
-        <div class="mypap2"><a href="https://drive.google.com/file/d/1lggJlMN2uGKlWMQYRf7rKVFi4cD3cmWU/view?usp=drive_link " ><span   >FOR syllabus link 1</span></a> </div>   <br>
-        <div class="mypap2"><a href="https://drive.google.com/file/d/1-PdzLsqFUxZIuK2PpVYUbL7lnAG76UN4/view?usp=drive_link" ><span   >FOR syllabus link 2</span></a> </div>   <br>
-        <p style="text-align: center;"> <a href="https://forms.gle/y84RMg7SoHqhwRjH8"><img src="okay.jpeg" class="yatoimg" /></a><br></p>
+        <div class="mypap2"><a href="https://drive.google.com/file/d/1lggJlMN2uGKlWMQYRf7rKVFi4cD3cmWU/view?usp=drive_link " target="_blank"><span   >FOR syllabus link 1</span></a> </div>   <br>
+        <div class="mypap2"><a href="https://drive.google.com/file/d/1-PdzLsqFUxZIuK2PpVYUbL7lnAG76UN4/view?usp=drive_link" target="_blank"><span   >FOR syllabus link 2</span></a> </div>   <br>
+        <p style="text-align: center;"> <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="okay.jpeg" class="yatoimg" /></a><br></p>
  <hr><p style="text-align: center;">Previous papers</p><hr>
-        <div class="mypap2"><a href="https://drive.google.com/file/d/1fHE7XePTPcSKszLDqJ1XbKipN37Tizzj/view?usp=drive_link" ><span   >NIFT BDES CAT 2016</span></a> </div>  <br>
-    <div class="mypap2"><a href="https://drive.google.com/file/d/15-tCKf4dbMbJ90K6vSotZREH1GJLK_QC/view?usp=drive_link" ><span   >NIFT BDES CAT 2017</span></a> </div>     <br>
-    <div class="mypap2"><a href="https://drive.google.com/file/d/17am62__hPvXW9SXgIe5HEj60Vh8HgzW3/view?usp=drive_link" ><span   >NIFT BDES CAT 2018</span></a> </div>  <br>
-    <div class="mypap2"><a href="https://drive.google.com/file/d/1yz7JnrgN6honbKEiO_Kxh7aE05WWk7ol/view?usp=drive_link" ><span   >NIFT BDES GAT 2016</span></a> </div> <br>
-    <div class="mypap2"><a href="https://drive.google.com/file/d/1yV4OAlHPI0PfJ0SoyeYZ6_qF8UJY_aBw/view?usp=drive_link" ><span   >NIFT BDES GAT 2017</span></a> </div>  <br>
-    <div class="mypap2"><a href="https://drive.google.com/file/d/1CWkmVREDtceerjyVoiXBeChng00qn4-7/view?usp=drive_link" ><span   >NIFT BDES GAT 2018</span></a> </div>   <br>
+        <div class="mypap2"><a href="https://drive.google.com/file/d/1fHE7XePTPcSKszLDqJ1XbKipN37Tizzj/view?usp=drive_link" target="_blank"><span   >NIFT BDES CAT 2016</span></a> </div>  <br>
+    <div class="mypap2"><a href="https://drive.google.com/file/d/15-tCKf4dbMbJ90K6vSotZREH1GJLK_QC/view?usp=drive_link" target="_blank"><span   >NIFT BDES CAT 2017</span></a> </div>     <br>
+    <div class="mypap2"><a href="https://drive.google.com/file/d/17am62__hPvXW9SXgIe5HEj60Vh8HgzW3/view?usp=drive_link" target="_blank"><span   >NIFT BDES CAT 2018</span></a> </div>  <br>
+    <div class="mypap2"><a href="https://drive.google.com/file/d/1yz7JnrgN6honbKEiO_Kxh7aE05WWk7ol/view?usp=drive_link" target="_blank"><span   >NIFT BDES GAT 2016</span></a> </div> <br>
+    <div class="mypap2"><a href="https://drive.google.com/file/d/1yV4OAlHPI0PfJ0SoyeYZ6_qF8UJY_aBw/view?usp=drive_link" target="_blank"><span   >NIFT BDES GAT 2017</span></a> </div>  <br>
+    <div class="mypap2"><a href="https://drive.google.com/file/d/1CWkmVREDtceerjyVoiXBeChng00qn4-7/view?usp=drive_link" target="_blank"><span   >NIFT BDES GAT 2018</span></a> </div>   <br>
     
 </fieldset></div>
 <br>
@@ -71,13 +71,13 @@
     <fieldset>
         <legend><span style="font-size: 50px; color:rgb(176, 255, 177);">UPCOMING</span></legend>
     <ul>
-        <p style="text-align: center;"> <a href="https://forms.gle/y84RMg7SoHqhwRjH8"><img src="ladynoir.jpg" class="yatoimg2" /></a><br></p>
+        <p style="text-align: center;"> <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="ladynoir.jpg" class="yatoimg2" /></a><br></p>
         <li>DATA SCIENCE</li><br>
         <li>PYTHON</li><br>
         <li>AMPTITUDE</li><br>
         <li>Mathematics</li><br>
         <li>others...</li><br>
-        <li> <a href="https://forms.gle/7JbePMy98yyF2jse9" style="background-color: black;">click here to <b>Suggest me</b></a></li>
+        <li> <a href="https://forms.gle/7JbePMy98yyF2jse9" target="_blank" style="background-color: black;">click here to <b>Suggest me</b></a></li>
 
     </ul>
 </fieldset>
@@ -87,10 +87,10 @@
 <br>
 <hr>
 <br> <p style="font-size: 50px; text-align: center;"> 
- <a href="https://forms.gle/y84RMg7SoHqhwRjH8"><img src="tenor.png" class="yatoimg" /></a><br> <b>request for updates :</b> </p>
+ <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="tenor.png" class="yatoimg" /></a><br> <b>request for updates :</b> </p>
 <div class="gform">
 
-    <a href="https://forms.gle/7JbePMy98yyF2jse9">👉🏻 Send a message to  creator <br> Yato-kami</a>          
+    <a href="https://forms.gle/7JbePMy98yyF2jse9" target="_blank">👉🏻 Send a message to  creator <br> Yato-kami</a>          
 
 </div>
     <br>
@@ -109,7 +109,7 @@
     <footer>
         <br>
         <hr> <p style="font-size: 50px; text-align: center;">Drawing Available soon</p>  <hr>
-        <p style="text-align: center;"> <a href="https://forms.gle/y84RMg7SoHqhwRjH8"><img src="me.jpg" class="yatoimg1" /></a><br></p> <br><br> 
-        <hr> <p style="font-size: 50px; text-align: center;">Contact us at : <b style="background-color: rgb(0, 0, 0);"><a href="https://forms.gle/7JbePMy98yyF2jse9">YATO SERVICES </a></b> <hr><br><hr> <span style="text-align: center;background-color: rgb(7, 17, 17);">  ^-^ <i>Always at your services</i>  😊👍🏻</span> <hr><br><br><br></p>  <hr>
+        <p style="text-align: center;"> <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="me.jpg" class="yatoimg1" /></a><br></p> <br><br> 
+        <hr> <p style="font-size: 50px; text-align: center;">Contact us at : <b style="background-color: rgb(0, 0, 0);"><a href="https://forms.gle/7JbePMy98yyF2jse9" target="_blank">YATO SERVICES </a></b> <hr><br><hr> <span style="text-align: center;background-color: rgb(7, 17, 17);">  ^-^ <i>Always at your services</i>  😊👍🏻</span> <hr><br><br><br></p>  <hr>
     </footer>
 </html>
