--- a/index.html
+++ b/index.html
@@ -111,5 +111,6 @@
         <hr> <p style="font-size: 50px; text-align: center;">Drawing Available soon</p>  <hr>
         <p style="text-align: center;"> <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="me.jpg" class="yatoimg1" /></a><br></p> <br><br> 
         <hr> <p style="font-size: 50px; text-align: center;">Contact us at : <b style="background-color: rgb(0, 0, 0);"><a href="https://forms.gle/7JbePMy98yyF2jse9" target="_blank">YATO SERVICES </a></b> <hr><br><hr> <span style="text-align: center;background-color: rgb(7, 17, 17);">  ^-^ <i>Always at your services</i>  😊👍🏻</span> <hr><br><br><br></p>  <hr>
+            <p style="text-align: center;"> <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="thanks.jpeg" class="yatoimg1" /></a><br> <span style="color: rgb(22, 255, 158);">Thanks for visiting US</span> </p> <br><br> 
     </footer>
 </html>
