--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     </head>
     <body>
         <header style="text-align:center; font-size:40px;"><br>Arigatooo<br> Yes i received <br> i will establish <br> definitely I<br> I WIll always wait 😊</header> <br><br>
-        <div style="font-size: 30px; text-align: center;">
-        <a href="https://youtu.be/-pHfPJGatgE">:)</a> </div>
+        <div style="font-size: 30px; text-align: center;" class="yato">
+        <a href="https://youtu.be/-pHfPJGatgE">---- :)----</a> </div>
         <div class="yato">
         <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="yato-kamii.jpg" class="yatoimg" /></a> </div>
         <div class="welcome" style="margin-left: 5%;margin-right: 5%;"><p ><b><a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank" style="color:black;background-color: rgb(142, 255, 255);padding:3%;font-size:45px;border-radius: 30%;" >|- Always at your services -|</a></b></p>
