--- a/index.html
+++ b/index.html
@@ -6,12 +6,23 @@
     </head>
     <body>
         <header style="text-align:center; font-size:40px;"><br>Arigatooo<br> Yes i received <br> i will establish <br> definitely I<br> I WIll always wait 😊</header> <br><br>
-       <feildset> <div style="font-size: 30px; text-align: center;" class="yato">
-        <a href="https://youtu.be/-pHfPJGatgE">---- :)----</a> </div></feildset> <br>
+      
         <div class="yato">
         <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="yato-kamii.jpg" class="yatoimg" /></a> </div>
         <div class="welcome" style="margin-left: 5%;margin-right: 5%;"><p ><b><a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank" style="color:black;background-color: rgb(142, 255, 255);padding:3%;font-size:45px;border-radius: 30%;" >|- Always at your services -|</a></b></p>
+            
     </div>
+        <feildset> <div style="text-align: center;
+    padding:5px;
+    font-size: 35px;
+    background-color: #2a77f3;
+    border-radius: 8%;
+    border-top-right-radius: 20%;
+    border-bottom-left-radius: 20%;
+    margin: 10%;
+    padding : 2%;
+    border: 6px solid rgb(31, 31, 187); ">
+        <a href="https://youtu.be/-pHfPJGatgE">😁</a> </div></feildset>
     <div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank" ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
     <div class="mypap3"><a href="https://forms.gle/BYcWLsfzv9LyCBFRA" target="_blank"><span   ><b>SENT A PICTURE click here</b> </span></a> </div>
 
