--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     margin: 10%;
     padding : 2%;
     border: 6px solid rgb(31, 31, 187); ">
-        <a href="https://youtu.be/-pHfPJGatgE">😁</a> </div></feildset>
+        <a href="https://youtu.be/-pHfPJGatgE"> | - | - 😁 - | - | </a> </div></feildset>
     <div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank" ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
     <div class="mypap3"><a href="https://forms.gle/BYcWLsfzv9LyCBFRA" target="_blank"><span   ><b>SENT A PICTURE click here</b> </span></a> </div>
 
