--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     border-radius: 8%;
     border-top-right-radius: 20%;
     border-bottom-left-radius: 20%;
-    margin: 10%;
+    margin-left: 35%;
+    margin-right: 35%;
     padding : 2%;
     border: 6px solid rgb(31, 31, 187); ">
         <a href="https://youtu.be/-pHfPJGatgE"> | - | - 😁 - | - | </a> </div></feildset>
