--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <title>Password Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css">
+
 </head>
 <body>
+<div class="yato">
+        <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="yaato.jpg" class="yatoimg" /></a> </div>
+<br>
     <div class="password-container">
-        <h2>Enter Password</h2>
+        <h2 style="color:black;">Enter Password</h2>
         <input type="password" id="password" class="password-input" placeholder="Password">
         <button class="view-password-button" onclick="togglePasswordVisibility()">View Password</button>
         <button class="submit-button" onclick="checkPassword()">Open My Page</button>
@@ -16,3 +20,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
