--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 <div class="yato">
         <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="yaato.jpg" class="yatoimg" /></a> </div>
 <br>
+<p style="text-align:center; font-size25px;">Konichiwa --k 😋</p>
     <div class="password-container">
         <h2 style="color:black;">Enter Password</h2>
         <input type="password" id="password" class="password-input" placeholder="Password">
         <button class="view-password-button" onclick="togglePasswordVisibility()">View Password</button>
-        <button class="submit-button" onclick="checkPassword()">Open My Page</button>
+        <button class="submit-button" onclick="checkPassword()">GO</button>
     </div>
 
     <script src="script.js"></script>
 </body>
 </html>
+
 
