--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <title>Password Page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css">
-
+<style>
+a {
+        text-decoration:none;
+        color:white;  
+    }
+.mypap2 {
+    text-align: center;
+    padding:16px;
+    font-size: 45px;
+    background-color: #2a77f3;
+    border-radius: 12%;
+    border-top-right-radius: 25%;
+    border-bottom-left-radius: 25%;
+    margin-left:20%;
+    margin-right:20%;
+    padding : 2%;
+    border: 6px solid rgb(31, 31, 187); 
+}
+</style>
 </head>
 <body>
 <div class="yato">
@@ -19,7 +37,10 @@
     </div>
 
     <script src="script.js"></script>
+<br>
+    <div class="mypap2"><a href="https://forms.gle/k889zDiBBUns4VeW6" target="_blank"><span   >Forgot password</span></a> </div>   <br>
 </body>
 </html>
+
 
 
