--- a/index.html
+++ b/index.html
@@ -22,6 +22,19 @@ a {
     padding : 2%;
     border: 6px solid rgb(31, 31, 187); 
 }
+.mypap3 {
+    text-align: center;
+    padding:16px;
+    font-size: 45px;
+    background-color: #2a77f3;
+    border-radius: 12%;
+    border-radius: 25%;
+    
+    margin-left:20%;
+    margin-right:20%;
+    padding : 2%;
+    border: 6px solid rgb(31, 31, 187); 
+}
 </style>
 </head>
 <body>
@@ -40,7 +53,7 @@ a {
 <br>
     <div class="mypap2"><a href="https://forms.gle/k889zDiBBUns4VeW6" target="_blank"><span   >Forgot password</span></a> </div>   <br>
 </body>
+<br>
+    <div class="mypap3"><a href="https://forms.gle/8bLBpz6YiyiFtzHU8" target="_blank"><span   >picture of issue {optional}</span></a> </div>   <br><br><br>
+</body>
 </html>
-
-
-
