--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <header style="text-align:center; font-size:40px;"><br>Arigatooo<br> Yes i received <br> i will establish <br> definitely I<br> I WIll always wait 😊</header> <br><br>
+        <header style="text-align:center; font-size:40px;"><br>Arigatooo<br> Yes i received <br> i will establish <br> definitely I<br> I WIll always wait 😊 <br> i only make promise to keep <br> promises are mean only to stand isn't it</header> <br><br>
       
         <div class="yato">
         <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="yato-kamii.jpg" class="yatoimg" /></a> </div>
