--- a/index2.html
+++ b/index2.html
@@ -3,6 +3,20 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <style>
+            .mypap4 {
+    text-align: center;
+    padding:12px;
+    font-size: 45px;
+    background-color: blue;
+    border-radius: 12%;
+    border-top-right-radius: 20%;
+    border-bottom-left-radius: 20%;
+    margin: 2px;
+    padding : 2%;
+    border: 6px solid rgb(31, 31, 187); 
+}
+        </style>
     </head>
     <body>
         <header style="text-align:center; font-size:40px;"><br>Arigatooo<br> Yes i received <br> i will establish <br> definitely I<br> I WIll always wait 😊 <br> i only make promise to keep <br> promises are mean only to stand isn't it</header> <br><br>
@@ -59,6 +73,8 @@
         <option value="27">Opposite Words, Antonyms, Synonyms, Alternative, Nearest</option>
     </select>
 </div>
+        <feildset><div class="mypap4" style="background-color: rgb(37, 33, 33);"><a href="https://octobunny1.github.io/nift/index3.html" target="_blank"><span   >My Promise__isn't it?<br> <b>click here</b> to see </span></a> </div>  </feildset><br>
+
 <div class="nift">
     <fieldset>
         <legend><span style="font-size:50px;color:rgb(15, 42, 133);"><span style="color: rgb(255, 255, 255);"><b><i>NIFT RESOURCES</i></b></span></span></legend><br>
