--- a/index2.html
+++ b/index2.html
@@ -73,7 +73,7 @@
         <option value="27">Opposite Words, Antonyms, Synonyms, Alternative, Nearest</option>
     </select>
 </div>
-        <feildset><div class="mypap4" style="background-color: rgb(37, 33, 33);"><a href="https://octobunny1.github.io/nift/index3.html" target="_blank"><span   >My Promise__isn't it?<br> <b>click here</b> to see </span></a> </div>  </feildset><br>
+        <feildset><div class="mypap4" style="background-color: rgb(37, 33, 33);"><a href="https://octobunny1.github.io/nift/index3.html" target="_blank"><span   >Promise__isn't it?<br> <b>click here</b> to see </span></a> </div>  </feildset><br>
 
 <div class="nift">
     <fieldset>
