--- a/index4.html
+++ b/index4.html
@@ -3,7 +3,7 @@
 <body>
 
 <h2 style="text-align:center;">No need to screen shot<br>it always stay here<br>
-<img src="My promise.jpg" ></h2>
+<img src="My promise.jpg" alt="https://drive.google.com/file/d/1dIIoZOWyN4h1kB7IerVoR3eC9pD9hpDi/view" ></h2>
 
 </body>
 </html>
