--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ a {
 <div class="yato">
         <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="yaato.jpg" class="yatoimg" /></a> </div>
 <br>
-<p style="text-align:center; font-size25px;"><b>-SARANGHAE-</b></p>
+<p style="text-align:center; font-size25px;background-color:black;"><i><b>-SARANGHAE-</b></i></p>
     <div class="password-container">
         <h2 style="color:black;">Enter Password</h2>
         <input type="password" id="password" class="password-input" placeholder="Password">
