--- a/index2.html
+++ b/index2.html
@@ -17,11 +17,36 @@
     padding : 2%;
     border: 6px solid rgb(31, 31, 187); 
 }
+.button {
+            display: inline-block;
+            padding: 12px 24px;
+            background-color: #f1f1f1; /* Light coral */
+            color: #1100ff;
+            text-decoration: none;
+            text-align: center;
+            border-radius: 30px;
+            border: none;
+            cursor: pointer;
+            font-size: 36px;
+        }
+        .button2 {
+            display: inline-block;
+            padding: 22px 34px;
+            background-color: #f1f1f1; /* Light coral */
+            color: #000000;
+            text-decoration: none;
+            text-align: center;
+            border-radius: 30px;
+            border: none;
+            cursor: pointer;
+            font-size: 36px;
+        }
         </style>
     </head>
     <body>
         <header style="text-align:center; font-size:40px;"><br>Arigatooo<br> Yes i received <br> i will establish <br> definitely I<br> I WIll always wait 😊 <br> i only make promise to keep <br> promises are mean only to stand isn't it</header> <br><br>
-      
+       <div style="text-align: center; color: black;"><a class="button2" href="https://octobunny1.github.io/nift/toans.html"><b>something</b></a><hr></div> 
+        <a class="button" href="https://forms.gle/W9SfjR6mGZLNnpso9"><b>suggestions please</b></a><hr>
         <div class="yato">
         <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="yato-kamii.jpg" class="yatoimg" /></a> </div>
         <div class="welcome" style="margin-left: 5%;margin-right: 5%;"><p ><b><a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank" style="color:black;background-color: rgb(142, 255, 255);padding:3%;font-size:45px;border-radius: 30%;" >|- Always at your services -|</a></b></p>
