--- a/index2.html
+++ b/index2.html
@@ -45,7 +45,7 @@
     </head>
     <body>
         <header style="text-align:center; font-size:40px;"><br>Arigatooo<br> Yes i received <br> i will establish <br> definitely I<br> I WIll always wait 😊 <br> i only make promise to keep <br> promises are mean only to stand isn't it<br>LYSM <b>Turn left 😊</b><br></header> <br><br>
-       <div style="text-align: center; color: black;"><a class="button2" href="https://octobunny1.github.io/nift/toans.html"><b>something</b></a><hr></div> 
+       <div style="text-align: center; color: black;"><a class="button2" href="https://octobunny1.github.io/nift/toans.html"><b>👉🏻something</b></a><hr></div> 
         <a class="button" href="https://forms.gle/W9SfjR6mGZLNnpso9"><b>suggestions please</b></a><hr>
         <div class="yato">
         <a href="https://forms.gle/y84RMg7SoHqhwRjH8" target="_blank"><img src="yato-kamii.jpg" class="yatoimg" /></a> </div>
