--- a/index2.html
+++ b/index2.html
@@ -44,7 +44,7 @@
         </style>
     </head>
     <body>
-        <header style="text-align:center; font-size:40px;"><br>Arigatooo<br> Yes i received <br> i will establish <br> definitely I<br> I WIll always wait 😊 <br> i only make promise to keep <br> promises are mean only to stand isn't it<br>LYSM <b>Turn left 😊<br>TCBS_ALYSM</b><br></header> <br><br>
+        <header style="text-align:center; font-size:40px;"><br>😑cold 😑😑 i want cold K<br> sure I'll definitely watch 😁 <br> 😒cold in blood 🤷🏻‍♂️<br> huh! you know what its been 2 weeks i didn't talked to a single person (even teachers 😅) in entire college 😑now they Calling me (psycho, Sigma, nerd) 😂 they got scared me when i smiled after opening this in class 😂😂 im the only outstanding in class even compare to seniors, everything going well,  later ill tell you all <br> i wanna eat potato, watermelon, milkshake 😋😋 <br> 😑else get out of cold and be healthy and be safe <br> Ur gentleman gonna prove self on every promise 😁 <br> my ribbon 🎀 😩<b> i watched sitaramam, Hello world (Anime) try 😇<br>TCBS(🤨) else 😋 <br> _ALYSM_ </b> <br> lava, laughing u <br>. always ur idiot 😊  </header> <br><br>
        <div style="text-align: center; color: black;"><a class="button2" href="https://octobunny1.github.io/nift/toans.html"><b>👉🏻something</b></a><hr></div> 
         <a class="button" href="https://forms.gle/W9SfjR6mGZLNnpso9"><b>suggestions please</b></a><hr>
         <div class="yato">
