--- a/index2.html
+++ b/index2.html
@@ -44,7 +44,19 @@
         </style>
     </head>
     <body>
-        <header style="text-align:center; font-size:40px;"><br> A_(alws) sure I'll definitely watch 😁 <b>" ride your waves 😢🤘😭 " ........."the summer to the tunnel the exist of goodbye - no words 😭😭😭😭😭 its amazing , no words to describe ... both movies 😭😭🤘🤘♨️ today i watched sitaram then hello world now these bucket full of tearful Sunday 😅😭😅😭🤝 😒😑 keep some to watch together, i wanna watch (the lady bug and catnoir movie) together dont watch it alone 😑😑 its a warning,😑" </b> <br> <br>😑cold 😑😑 i want cold K 😒cold in blood 🤷🏻‍♂️<br> huh! you know what its been 2 weeks i didn't talked to a single person (even teachers 😅) in entire college 😑now they Calling me (psycho, Sigma, nerd) 😂 they got scared me when i smiled after opening mouth in class 😂😂 they thought im mute kid 😑😑 but now' im the only outstanding in class even compare to seniors, a lecture acknowledged me and talk to me in  planning to make something great work in college website it a good opportunity, everything going well,  later ill tell you all <br> IM FINe and well 🙄but MUSM, and im not skipping sleeps, im only fasting at Saturday, doing daily exercise, doing well in studies, practicing language 😁, 🙄 listen to 🥔 songs whenever i feel low or any...👉👈,... be safe, <br> i wanna eat potato, watermelon, milkshake 😋😋 <br> 😑else get out of cold and be healthy and be safe <br> Ur gentleman gonna prove self on every promise 😁 <div style="text-align: center; color: black;"><a class="button2" href="https://youtu.be/KrsqPE9SMxo?t=195"><b>👉.click here.👈</b></a><hr></div> <br> my ribbon 🎀 😩<b> i watched sitaramam, Hello world (Anime) try 😇<br>TCBS(🤨) else 😋 <br> mitsuha, taki_ALYSM_ </b> <br> lava,naru A_laughing u hina <br>. always ur idiot 😊 <br> turn left now sleep<3 </header> <br><br>
+        <header style="text-align:center; font-size:40px;"><br> it's not rude its something advice for being better 😁 <br>
+            <b> the day when i said its only :_: , i come up with all mind to time where it shown what it mean by whatever, where i did all promises heartfully. i only wants ;_; </b>
+            <br> just see how i gonna make it true each of my line  😊<br> 
+            saturday is my choice to go on my wish to god 😇 <br> for now im sure gonna go with setting up myself to the best where i can make dreams come ture 🎀<br> sure definitely ill improve and be better in everything 😁 Arigato for your supportive advice  <br> Ur gentleman gonna prove self on every promise 😁 <br> 
+            those songs are amazing you definitely gonna select, you are the best , im gonna listen to every day😊, its only you no other.<br> k-1 or k-last only :_:. <br> and surely it definitely the Brightest together till end...<br> 
+            giving up is never an option, as i said im gonna make it... just wait for disneyland 😊
+            <br> <b>Saranghae</b> <br>
+            
+            <div style="text-align: center; color: black;"><a class="button2" href="https://youtu.be/KrsqPE9SMxo?t=195"><b>👉.click here.👈</b></a><hr>
+            </div> <br>
+            _P_B_S_T_C__A_L_Y_S_M_<b>  <br> i have permission for saturday(🤨), but not you... <br> 
+                </b> <br> i truly believe the future really as brighter as you said <br>. aLYSM  <br> turn left now sleep<3 TC </header> <br><br>
+        
        <div style="text-align: center; color: black;"><a class="button2" href="https://octobunny1.github.io/nift/toans.html"><b>👉🏻something</b></a><hr></div> 
         <a class="button" href="https://forms.gle/W9SfjR6mGZLNnpso9"><b>suggestions please</b></a><hr>
         <div class="yato">
