--- a/index2.html
+++ b/index2.html
@@ -47,12 +47,13 @@
         <header style="text-align:center; font-size:40px;"><br> it's not rude its something advice for being better 😁 <br>
             <b> the day when i said its only :_: , i come up with all mind to time where it shown what it mean by whatever, where i did all promises heartfully. i only wants ;_; </b>
             <br> just see how i gonna make it true each of my line  😊<br> 
+             <div style="text-align: center; color: black;"><a class="button2" href="https://youtu.be/lWDni7fEG4c"><b>👉...|_|...👈</b></a><br>
             saturday is my choice to go on my wish to god 😇 <br> for now im sure gonna go with setting up myself to the best where i can make dreams come ture 🎀<br> sure definitely ill improve and be better in everything 😁 Arigato for your supportive advice  <br> Ur gentleman gonna prove self on every promise 😁 <br> 
             those songs are amazing you definitely gonna select, you are the best , im gonna listen to every day😊, its only you no other.<br> k-1 or k-last only :_:. <br> and surely it definitely the Brightest together till end...<br> 
             giving up is never an option, as i said im gonna make it... just wait for disneyland 😊
             <br> <b>Saranghae</b> <br>
             
-            <div style="text-align: center; color: black;"><a class="button2" href="https://youtu.be/KrsqPE9SMxo?t=195"><b>👉.click here.👈</b></a><hr>
+           
             </div> <br>
             _P_B_S_T_C__A_L_Y_S_M_<b>  <br> i have permission for saturday(🤨), but not you... <br> 
                 </b> <br> i truly believe the future really as brighter as you said <br>. aLYSM  <br> turn left now sleep<3 TC </header> <br><br>
