--- a/index2.html
+++ b/index2.html
@@ -53,7 +53,7 @@
             giving up is never an option, as i said im gonna make it... just wait for disneyland 😊
             <br> <b>Saranghae</b> <br>
             
-        <feildset><div class="mypap4" style="background-color: rgb(37, 33, 33);"><a href="https://octobunny1.github.io/nift/sure.html"><span   >. sire as you said 😂 click here to see <br> <b>click here</b> to see </span></a> </div>  </feildset><br>
+        <feildset><div class="mypap4" style="background-color: rgb(37, 33, 33);"><a href="https://octobunny1.github.io/nift/sure.html"><span   >. sure your highness 😂 click here to see <br> <b>click here</b> to see </span></a> </div>  </feildset><br>
            
             </div> <br>
             _P_B_S_T_C__A_L_Y_S_M_<b>  <br> i have permission for saturday(🤨), but not you... <br> 
