--- a/sure.html
+++ b/sure.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2 style="text-align:center;">No need to screen shot<br>it always stay here<br>
+<h2 style="text-align:center;">Hai princess as you said 🤝🤘<br>
 <img src="sure.jpg" alt="https://drive.google.com/file/d/1X1gpkOLkXNyFx6VpWRiBR4SRYlrphmOL/view?usp=sharing" ></h2>
 
 </body>
