--- a/sure.html
+++ b/sure.html
@@ -4,7 +4,9 @@
 
 <h2 style="text-align:center;">Hai princess as you said 🤝🤘<br>
 <img src="sure.jpg" alt="https://drive.google.com/file/d/1X1gpkOLkXNyFx6VpWRiBR4SRYlrphmOL/view?usp=sharing" ></h2>
-
+<br>
+ <h2 style="text-align:center;">nerd in class 🤘ing u<br>
+<img src="In_class.jpg" alt="https://drive.google.com/file/d/1ESJ3ErWnj-BelVspyK1Rc6sVzHRkv-mM/view?usp=sharing" ></h2>
 </body>
 </html>
  	
