--- a/index2.html
+++ b/index2.html
@@ -68,7 +68,7 @@
                         
                        <br><div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8"  ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
                        <br><div class="mypap3"><a href="https://forms.gle/BYcWLsfzv9LyCBFRA" ><span   ><b>SENT A PICTURE click here</b> </span></a> </div>
-                       <feildset><div class="mypap4" style="background-color: rgb(37, 33, 33);"><a href="https://octobunny1.github.io/nift/index3.html"><span   >Promise__isn't it?<br> <b>click here</b> to see </span></a> </div>  </feildset><br>
+                    <!---   <feildset><div class="mypap4" style="background-color: rgb(37, 33, 33);"><a href="https://octobunny1.github.io/nift/index3.html"><span   >Promise__isn't it?<br> <b>click here</b> to see </span></a> </div>  </feildset><br> --->
                        
                     </div>
                    </div>
