--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
 
             <div class="dispbody">
                 <div class="container1">
-                   <p class="pswd">🌸 enter password 🌸</p>
+                   <p class="pswd">🌸 🎓 🌸</p>
                    <input type="password" id="passwordInput" placeholder=" "><hr>
                    <button id="showContentButton" class="buttonn"><b>OPEN</b></button>
                    <div id="hiddenContent"> <br>
