--- a/index2.html
+++ b/index2.html
@@ -17,13 +17,17 @@
 
             <div class="dispbody">
                 <div class="container1">
-                   <p class="pswd">🌸 🎓 🌸</p>
+                   <p class="pswd">🌸 -🎓- 🌸</p>
                    <input type="password" id="passwordInput" placeholder=" "><hr>
                    <button id="showContentButton" class="buttonn"><b>OPEN</b></button>
                    <div id="hiddenContent"> <br>
                     <p>Aiesteru</p><hr>
 <!--- begining of pass --->
 
+<hr>
+<br>
+<b> How is your health now, try not to eat icecream okay!?🤨 </b>
+<hr><br>
 <p> if you don't mind let me try to clear the doubts </p><hr><br>
 <p>
 <i>Wow you seem to.... safety.</i><br>
@@ -66,7 +70,7 @@ this number is my grandfather's from little nokia phone, while im cleaning his d
 
 <i> By the way this green thing which you updated it opens without password.. only by clicking opens 😐😂 </i> <br> --- 😬😐😶 yesss after you said i saw that, now im gonna fix it , thanks for your clear observation, 🤔 seems like this potato brain working faster than mine ... 🤓🤓 cool let me know others issues also <br> and be safe while using <br> 
 if possible try to use in incognito, <br> [google-chrome -> top_3-dots -> incognito -> paste_link -> and use...] ==  <br> this give more safety<hr><br>
-<br> --oi what ever question you have dont hesitate to ask <br> p_t_c_b_s.... <br> _A_L_Y_S_M_ <br><br><b> My Hinata 💝 </b>  <br><br>
+<br> --oi what ever question you have dont hesitate to ask <br> p_t_c_b_s.... <br> _A_L_Y_S_M_ <br><br> My Hinata💝 <br><br>
 <hr>
 
  <br><div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8"  ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
