--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
 
 <i>By the way I know your college time so don't worry about replying late, it's okay I understand</i><br> Arigato 😇, and today train an hour late at evening, bad train yesterday got in fire accident i guess it came in news... <br>
 and you know my day is like 'Taki' wake up walk to station, train then 2km walk to college in Bhimavaram a city in AP ... 😅 <br>
-<hr><br>
+
 <i>By the way you don't have to provide me any study material of 12 boards, if I need I will tell you about NID but not now later ok! </i><br> okay then i will give you when you need it..<hr><br>
 
 <i>I still haven't selected any song for my compitition 😐</i><br> in song you sent i may prefer " i like the dimples on the corner...." and you may plan based on time left <br> don't forget you are the best...😇 <hr><br>
@@ -50,7 +50,10 @@ that's so cruel, 🙁🙁🙁 please don't go out alone ok? please even tution a
 -- i saw the articles and all details, <b>' it says the bad person followed girl when she were going alone to home, and happend such a thing. and no article mentioned they are in relation it may or maynot be but that's so cruel ,<br> please be safe i beg you , please be safe , don't be alone or careless out side  '</b><br>
 but their religion is coincidence may be or may not be, <br> but please be safe please....<br>
 i dont know how you will recieve this, thiking racial(religion sides) raise conflicts only, if people may choose humanity over religion these kind of bad things will definitely gonna go down<br> and when you look at AP & TS as of my knowledge you see in these two states rather religion people choose humanity not all but uptp 75% +...<br>
-there also some exist in racial conflict but it is less, <br> afterall i may say, as everytime its all up on the mind and surrounding factors and mostly the inheritence of people mind and behaviour (racism)... <br>sorry if i said any wrong<br> 
+there also some exist in racial conflict but it is less, <br> afterall i may say, as everytime its all up on the mind and surrounding factors and mostly the inheritence of people mind and behaviour (racism)...<br>
+but when you see a country like dubai- its muslim country, when you look clear the only place where women are safe even alone midnight is dubai, and there women are great with their culture<br> such as others also exist<br> when come to india few zones of india still not after the olden customs of racism<br>
+i don't know how you may understand it...
+<br>sorry if i said any wrong<br> 
 <br> but the girls death is so cold blooded murder, i wish they will tourcher and kill the badguy.<br> after reading articles it tear up me a little<br> oi dont think of un-necessary things, and please be safe when youre at outside.<br>>
 hey did you remember once i said you about im gonna develop a system for girl protection, 2 days back when my teacher asked my goal's i said it and she said if we can have chance we shall definitely work with a good team on it... atleast i may try to do something..<hr><br>
 <b> but please be safe i beg you please be safe </b><br><hr><br>
