--- a/index2.html
+++ b/index2.html
@@ -68,6 +68,12 @@ please take care of yourself well and please be safe
         
        
 <!--- end of pass--->
+
+<br><hr>
+        <div class="mypap2" style="margin-left: 5%;margin-right: 5%;"><p ><b><a href="https://drive.google.com/drive/mobile/my-drive?pli=1" style="color:black;background-color: rgb(142, 255, 255);padding:3%;font-size:45px;border-radius: 30%;" >|- msg block -|</a></b></p>
+<br><hr><br>
+	
+			   <!--- end of sheets ------>
 	</div> </div>
         <div class="yato">
         <a href="" ><img src="yato-kamii.jpg" class="yatoimg" /></a> </div>
