--- a/index2.html
+++ b/index2.html
@@ -69,7 +69,7 @@ please take care of yourself well and please be safe
        
 <!--- end of pass--->
 
-
+    <div class="mypap2"><a href="https://forms.gle/FWxQA6bHaMdx4oKe8"><span   >txt to yato</span></a> </div>  <br>
 			   <!--- end of sheets ------>
 	</div> </div>
         <div class="yato">
