--- a/index2.html
+++ b/index2.html
@@ -52,8 +52,9 @@ but their religion is coincidence may be or may not be, <br> but please be safe 
 i dont know how you will recieve this, thiking racial(religion sides) raise conflicts only, if people may choose humanity over religion these kind of bad things will definitely gonna go down<br> and when you look at AP & TS as of my knowledge you see in these two states rather religion people choose humanity not all but uptp 75% +...<br>
 there also some exist in racial conflict but it is less, <br> afterall i may say, as everytime its all up on the mind and surrounding factors and mostly the inheritence of people mind and behaviour (racism)...<br>
 but when you see a country like dubai- its muslim country, when you look clear the only place where women are safe even alone midnight is dubai, and there women are great with their culture<br> such as others also exist<br> when come to india few zones of india still not after the olden customs of racism<br>
-i don't know how you may understand it...
-<br>sorry if i said any wrong<br> 
+i don't know how you may understand it...<br> what i mean is instead of thinking religion side, why can't we think as human to find a solution for such a thing to not get repeat again, if atleast one can't get change in mind how can a lot do that...<br>
+it's so painful such a thing about that girl, but aside see few articles raising religion conflicts instead of justice for that girl and protection of rest,, <br> 
+<br>sorry if i said any wrong<br>
 <br> but the girls death is so cold blooded murder, i wish they will tourcher and kill the badguy.<br> after reading articles it tear up me a little<br> oi dont think of un-necessary things, and please be safe when youre at outside.<br>>
 hey did you remember once i said you about im gonna develop a system for girl protection, 2 days back when my teacher asked my goal's i said it and she said if we can have chance we shall definitely work with a good team on it... atleast i may try to do something..<hr><br>
 <b> but please be safe i beg you please be safe </b><br><hr><br>
@@ -69,7 +70,9 @@ please take care of yourself well and please be safe
        
 <!--- end of pass--->
 
-    <div class="mypap2"><a href="https://forms.gle/FWxQA6bHaMdx4oKe8"><span   >txt to yato</span></a> </div>  <br>
+    <br><div class="mypap3" style="background-color: rgb(37, 33, 33);"><a href="https://forms.gle/y84RMg7SoHqhwRjH8"  ><span   >WANNA SAY SOMETHING TO <br> YATO <br> <b>click here</b> </span></a> </div>  
+    <br><div class="mypap3"><a href="https://forms.gle/BYcWLsfzv9LyCBFRA" ><span   ><b>SENT A PICTURE click here</b> </span></a> </div><br><br>
+
 			   <!--- end of sheets ------>
 	</div> </div>
         <div class="yato">
